--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,18 @@
+header {
+  background-color: grey;
+  padding-bottom: 0;
+  font: tan;
+}
+.mx-1 {
+  margin: 0%;
+  font: 'Courier New';
+  font-size: 12px;
+  display: inline;
+  padding: 7px;
+  text-transform: uppercase;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +26,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
