--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 header {
-  background-color: grey;
-  padding-bottom: 0;
+  background-color: #8d6e63;
+  padding-bottom: 8%;
   font: tan;
 }
 .mx-1 {
@@ -10,9 +10,23 @@ header {
   display: inline;
   padding: 7px;
   text-transform: uppercase;
+  position: relative;
+  left: 450px;
+  top: 100px;
 }
 
+.mx-2 {
+  margin-top: -6%;
+  position: absolute;
+  right: 15px;  
+  display: flex;
+}
 
+.flex-row h1 {
+  margin: 0%;
+  position: relative;
+  text-align: center;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
